# untaped-workspace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: workspace.md
src/untaped_workspace/: __init__.py  __main__.py  errors.py  plugin.py  settings.py
src/untaped_workspace/application/: __init__.py  add_repo.py  adopt_workspace.py  apply_workspace_branch.py  branch_workspace.py  edit_workspace.py  foreach.py  forget_workspace.py  import_workspace.py  init_workspace.py  list_workspaces.py  ports.py  prune_safety.py  remove_repo.py  repo_selector.py  shell_init.py  show_workspace.py  status_workspace.py  sync_workspace.py  sync_workspaces.py  workspace_bootstrapper.py  workspace_path.py  workspace_resolver.py
src/untaped_workspace/cli/: __init__.py  branch_commands.py  commands.py  common.py  completions.py  lifecycle_commands.py  ops_commands.py  rendering.py  repo_commands.py  ux_commands.py
src/untaped_workspace/domain/: __init__.py  manifest.py  models.py  payloads.py  prune_safety.py  state.py
src/untaped_workspace/infrastructure/: __init__.py  bare_cache.py  git_runner.py  manifest_repo.py  registry_repo.py  repo_discoverer.py  shell_runner.py  system_adapters.py  workspace_resolver.py
src/untaped_workspace/skills/untaped-workspace/: SKILL.md
tests/: cli_fixtures.py  conftest.py
tests/integration/: test_git_runner.py
tests/unit/: test_add_repo.py  test_adopt_workspace.py  test_bare_cache.py  test_ci_workflow.py  test_cli.py  test_cli_branch_commands.py  test_cli_common.py  test_cli_help.py  test_cli_lifecycle_commands.py  test_cli_ops_commands.py  test_cli_pipe.py  test_cli_repo_commands.py  test_cli_structure.py  test_cli_ux_commands.py  test_completions.py  test_filesystem_port.py  test_foreach_use_case.py  test_forget_workspace.py  test_format_raw_first_key.py  test_git_runner.py  test_git_runner_timeout.py  test_import_workspace.py  test_init_workspace.py  test_layering.py  test_list_workspaces.py  test_local_repo_discoverer.py  test_manifest.py  test_manifest_methods.py  test_manifest_repo.py  test_plugin_entrypoint.py  test_registry_repo.py  test_release_workflow.py  test_remove_repo.py  test_state.py  test_status_use_case.py  test_sync_use_case.py  test_sync_workspaces_use_case.py  test_system_adapters.py  test_tool_entrypoint.py  test_use_cases_manifest.py  (+5 more)
