[project]
name = "untaped-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
    "untaped-core",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
untaped-core = { workspace = true }
